--- a/publications.html
+++ b/publications.html
@@ -16,7 +16,7 @@
 <script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/bootstrap.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/paper.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -57,6 +57,7 @@ if (window.hljs) {
 
 
 
+<link rel="stylesheet" href="style.css" type="text/css" />
 
 
 
@@ -267,7 +268,41 @@ $(document).ready(function () {
 </div>
 
 
-<p>Hello, World!</p>
+<div id="submittedunder-review" class="section level4">
+<h4>Submitted/under review</h4>
+<p><strong>Fuhrmeister, P.</strong>, Elbuy, S., &amp; Bürki, A. (under review). Assessing reliability of picture-naming measures.</p>
+<p><strong>Fuhrmeister, P.</strong>, McCoach, D.B., &amp; Myers, E.B. (under review). Individual differences in phonological skills but not categorical perception predict non-native speech sound learning.</p>
+</div>
+<div id="acceptedin-press" class="section level4">
+<h4>Accepted/in press</h4>
+<p><strong>Fuhrmeister, P.</strong>, Madec, S., Lorenz, A., Elbuy, S. &amp; Bürki, A. (accepted). Behavioral and EEG evidence for inter-individual variability in late encoding stages of word production. <em>Language, Cognition, and Neuroscience.</em></p>
+</div>
+<div id="section" class="section level4">
+<h4>2022</h4>
+<p>Heffner, C.C., <strong>Fuhrmeister, P.</strong>, Luthra, S., Mechtenberg, H., Saltzman, D., &amp; Myers, E.B. (2022). Reliability for Perceptual Flexibility in Speech: Identification, Learning, and Adaptation. <em>Brain and Language, 226</em>(105070). <a href="https://doi.org/10.1016/j.bandl.2021.105070" class="uri">https://doi.org/10.1016/j.bandl.2021.105070</a></p>
+<p><strong>Fuhrmeister, P.</strong>, &amp; Myers, E. B. (2022). Structural variation in the temporal lobe predicts learning and retention of non-native speech sounds. <em>Language, Cognition and Neuroscience, 37</em>(1), 63-79. <a href="DOI:10.1080/23273798.2021.1944658" class="uri">DOI:10.1080/23273798.2021.1944658</a></p>
+</div>
+<div id="section-1" class="section level4">
+<h4>2021</h4>
+<p><strong>Fuhrmeister, P.</strong>, &amp; Bürki, A. (2021). Distributional properties of semantic interference in picture naming: Bayesian meta-analyses. <em>Psychonomic Bulletin &amp; Review</em>. <a href="DOI:10.3758/s13423-021-02016-6" class="uri">DOI:10.3758/s13423-021-02016-6</a></p>
+<p><strong>Fuhrmeister, P.</strong> (2021). Examining group differences in between-participant variability in non-native speech sound learning. <em>Attention, Perception, and Psychophysics, 83</em>(5), 1935-1941. <a href="https://doi.org/10.3758/s13414-021-02311-3" class="uri">https://doi.org/10.3758/s13414-021-02311-3</a></p>
+<p><strong>Fuhrmeister, P</strong>. &amp; Myers, E.B. (2021). Structural neural correlates of individual differences in categorical perception. <em>Brain and Language, 215</em>, 104919. <a href="https://doi.org/10.1016/j.bandl.2021.104919" class="uri">https://doi.org/10.1016/j.bandl.2021.104919</a></p>
+</div>
+<div id="section-2" class="section level4">
+<h4>2020</h4>
+<p><strong>Fuhrmeister, P.</strong>, Schlemmer, B., &amp; Myers, E.B. (2020). Adults show initial advantages over children in learning difficult non-native speech sounds. <em>Journal of Speech, Language, and Hearing Research, 63</em>(8), 2667-2679. <a href="https://doi.org/10.1044/2020_JSLHR-19-00358" class="uri">https://doi.org/10.1044/2020_JSLHR-19-00358</a></p>
+<p><strong>Fuhrmeister, P.</strong>, Smith, G., &amp; Myers, E.B. (2020). Overlearning of non-native speech sounds does not result in superior consolidation after a period of sleep. <em>The Journal of the Acoustical Society of America, 147</em>(3), EL289-294. <a href="https://doi.org/10.1121/10.0000943" class="uri">https://doi.org/10.1121/10.0000943</a></p>
+<p><strong>Fuhrmeister, P.</strong> &amp; Myers, E.B. (2020). Desirable and undesirable difficulties: influences of variability, training schedule, and aptitude on non-native phonetic learning. <em>Attention, Perception, and Psychophysics, 82</em>(4), 2049-2065. <a href="https://doi.org/10.3758/s13414-019-01925-y" class="uri">https://doi.org/10.3758/s13414-019-01925-y</a></p>
+</div>
+<div id="section-3" class="section level4">
+<h4>2019</h4>
+<p><strong>Fuhrmeister, P.</strong> (2019). Interference in memory consolidation of non-native speech sounds. In S. Fuchs, J. Cleland, &amp; A. Rochet-Capellan (Eds.), <em>Speech Production and Perception: Learning and Memory</em> (pp. 207-243). Berlin: Peter Lang. <a href="https://doi.org/10.3726/b15982" class="uri">https://doi.org/10.3726/b15982</a></p>
+<p>Luthra, S., <strong>Fuhrmeister, P.</strong>, Molfese, P. J., Guediche, S., Blumstein, S. E., &amp; Myers, E. B. (2019). Brain-behavior relationships in incidental learning of non-native phonetic categories. <em>Brain and Language, 198</em>, 104692. <a href="https://doi.org/10.1016/j.bandl.2019.104692" class="uri">https://doi.org/10.1016/j.bandl.2019.104692</a></p>
+</div>
+<div id="section-4" class="section level4">
+<h4>2017</h4>
+<p><strong>Fuhrmeister, P.</strong> &amp; Myers, E. B. (2017). Non-native phonetic learning is destabilized by exposure to phonological variability before and after training. <em>The Journal of the Acoustical Society of America. 142</em>(5), EL448-EL454. <a href="https://doi.org/10.1121/1.5009688" class="uri">https://doi.org/10.1121/1.5009688</a></p>
+</div>
 
 
 
