--- a/publications.html
+++ b/publications.html
@@ -280,13 +280,13 @@ $(document).ready(function () {
 <div id="section" class="section level4">
 <h4>2022</h4>
 <p>Heffner, C.C., <strong>Fuhrmeister, P.</strong>, Luthra, S., Mechtenberg, H., Saltzman, D., &amp; Myers, E.B. (2022). Reliability for Perceptual Flexibility in Speech: Identification, Learning, and Adaptation. <em>Brain and Language, 226</em>(105070). <a href="https://doi.org/10.1016/j.bandl.2021.105070" class="uri">https://doi.org/10.1016/j.bandl.2021.105070</a></p>
-<p><strong>Fuhrmeister, P.</strong>, &amp; Myers, E. B. (2022). Structural variation in the temporal lobe predicts learning and retention of non-native speech sounds. <em>Language, Cognition and Neuroscience, 37</em>(1), 63-79. <a href="DOI:10.1080/23273798.2021.1944658" class="uri">DOI:10.1080/23273798.2021.1944658</a></p>
+<p><strong>Fuhrmeister, P.</strong> &amp; Myers, E. B. (2022). Structural variation in the temporal lobe predicts learning and retention of non-native speech sounds. <em>Language, Cognition and Neuroscience, 37</em>(1), 63-79. <a href="DOI:10.1080/23273798.2021.1944658" class="uri">DOI:10.1080/23273798.2021.1944658</a></p>
 </div>
 <div id="section-1" class="section level4">
 <h4>2021</h4>
-<p><strong>Fuhrmeister, P.</strong>, &amp; Bürki, A. (2021). Distributional properties of semantic interference in picture naming: Bayesian meta-analyses. <em>Psychonomic Bulletin &amp; Review</em>. <a href="DOI:10.3758/s13423-021-02016-6" class="uri">DOI:10.3758/s13423-021-02016-6</a></p>
+<p><strong>Fuhrmeister, P.</strong> &amp; Bürki, A. (2021). Distributional properties of semantic interference in picture naming: Bayesian meta-analyses. <em>Psychonomic Bulletin &amp; Review</em>. <a href="DOI:10.3758/s13423-021-02016-6" class="uri">DOI:10.3758/s13423-021-02016-6</a></p>
 <p><strong>Fuhrmeister, P.</strong> (2021). Examining group differences in between-participant variability in non-native speech sound learning. <em>Attention, Perception, and Psychophysics, 83</em>(5), 1935-1941. <a href="https://doi.org/10.3758/s13414-021-02311-3" class="uri">https://doi.org/10.3758/s13414-021-02311-3</a></p>
-<p><strong>Fuhrmeister, P</strong>. &amp; Myers, E.B. (2021). Structural neural correlates of individual differences in categorical perception. <em>Brain and Language, 215</em>, 104919. <a href="https://doi.org/10.1016/j.bandl.2021.104919" class="uri">https://doi.org/10.1016/j.bandl.2021.104919</a></p>
+<p><strong>Fuhrmeister, P.</strong> &amp; Myers, E.B. (2021). Structural neural correlates of individual differences in categorical perception. <em>Brain and Language, 215</em>, 104919. <a href="https://doi.org/10.1016/j.bandl.2021.104919" class="uri">https://doi.org/10.1016/j.bandl.2021.104919</a></p>
 </div>
 <div id="section-2" class="section level4">
 <h4>2020</h4>
