--- a/index.html
+++ b/index.html
@@ -248,9 +248,6 @@ $(document).ready(function () {
 <li>
   <a href="publications.html">Publications</a>
 </li>
-<li>
-  <a href="CV.html">CV</a>
-</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
@@ -278,7 +275,7 @@ $(document).ready(function () {
 <hr />
 <div id="contact" class="section level4">
 <h4>Contact</h4>
-<p>pamela dot fuhrmeister at uni - potsdam dot de<br />
+<p>pamela dot fuhrmeister at uni hyphen potsdam dot de<br />
 pamfuhrmeister at gmail dot com</p>
 </div>
 
