--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ $(document).ready(function () {
 <!-- Broadly, I'm interested in how we speak and how we understand other people when they speak. Everyday conversations usually feel pretty effortless, so we may not notice all the work our brains are doing to allow us to speak and comprehend what others are saying. However, speaking and listening are actually complex processes, and we still have a lot to learn about how they work. -->
 <p>I am interested in perceptual learning of second-language speech sounds and how phonetic variability in the speech signal can affect learning and memory for those sounds. My work also seeks to better understand individual differences in speech perception, perceptual learning of speech, and speech production. So far I have gone about this by testing whether language ability, cognitive skills, or individual variation in brain structure (using MRI) predict individual differences in performance on various speech tasks.</p>
 <p>I am a big fan of open science, and I’ve made my data and analysis code for my recent projects publicly available at <a href="https://osf.io/m5ezq/">my OSF page</a>.</p>
-<p>In addition to being a researcher, I am an avid runner, and I enjoy tasting good wines, watching ZDF Krimis, and above all spending time with my husband, Garrett, and our adorable singapura cat, Maja.</p>
+<p>In addition to being a researcher, I am an avid runner, and I enjoy tasting good wines, watching crime shows, and above all spending time with my husband, Garrett, and our adorable singapura cat, Maja.</p>
 <hr />
 <div id="contact" class="section level4">
 <h4>Contact</h4>
