--- a/publications.html
+++ b/publications.html
@@ -274,12 +274,9 @@ $(document).ready(function () {
 <p><strong>Fuhrmeister, P.</strong>, Elbuy, S., &amp; Bürki, A. (under review). Assessing reliability of picture-naming measures.</p>
 <p><strong>Fuhrmeister, P.</strong>, McCoach, D.B., &amp; Myers, E.B. (under review). Individual differences in phonological skills but not categorical perception predict non-native speech sound learning.</p>
 </div>
-<div id="acceptedin-press" class="section level4">
-<h4>Accepted/in press</h4>
-<p><strong>Fuhrmeister, P.</strong>, Madec, S., Lorenz, A., Elbuy, S. &amp; Bürki, A. (accepted). Behavioral and EEG evidence for inter-individual variability in late encoding stages of word production. <em>Language, Cognition, and Neuroscience.</em></p>
-</div>
 <div id="section" class="section level4">
 <h4>2022</h4>
+<p><strong>Fuhrmeister, P.</strong>, Madec, S., Lorenz, A., Elbuy, S. &amp; Bürki, A. (2022). Behavioral and EEG evidence for inter-individual variability in late encoding stages of word production. <em>Language, Cognition, and Neuroscience.</em> <a href="https://doi.org/10.1080/23273798.2022.2030483" class="uri">https://doi.org/10.1080/23273798.2022.2030483</a> <a href="Fuhrmeister_et_al_2022.pdf" target="_blank">PDF</a> <a href="https://osf.io/svjh5/" target="_blank">Data/code</a></p>
 <p>Heffner, C.C., <strong>Fuhrmeister, P.</strong>, Luthra, S., Mechtenberg, H., Saltzman, D., &amp; Myers, E.B. (2022). Reliability for Perceptual Flexibility in Speech: Identification, Learning, and Adaptation. <em>Brain and Language, 226</em>(105070). <a href="https://doi.org/10.1016/j.bandl.2021.105070" class="uri">https://doi.org/10.1016/j.bandl.2021.105070</a></p>
 <p><strong>Fuhrmeister, P.</strong> &amp; Myers, E. B. (2022). Structural variation in the temporal lobe predicts learning and retention of non-native speech sounds. <em>Language, Cognition and Neuroscience, 37</em>(1), 63-79. <a href="DOI:10.1080/23273798.2021.1944658" class="uri">DOI:10.1080/23273798.2021.1944658</a> <a href="Fuhrmeister_Myers_2021b.pdf" target="_blank">PDF</a> <a href="https://osf.io/vbtxd/" target="_blank">Data/code</a></p>
 </div>
