--- a/publications.html
+++ b/publications.html
@@ -271,8 +271,8 @@ $(document).ready(function () {
 
 <div id="submittedunder-review" class="section level4">
 <h4>Submitted/under review</h4>
-<p><strong>Fuhrmeister, P.</strong>, Elbuy, S., &amp; Bürki, A. (under review). Assessing reliability of picture-naming measures.</p>
-<p><strong>Fuhrmeister, P.</strong>, McCoach, D.B., &amp; Myers, E.B. (under review). Individual differences in phonological skills but not categorical perception predict non-native speech sound learning.</p>
+<p><strong>Fuhrmeister, P.</strong>, Elbuy, S., &amp; Bürki, A. (under review). Are faster participants always faster? Assessing reliability of participants’ mean response speed in picture naming.</p>
+<p><strong>Fuhrmeister, P.</strong>, Phillips, M., McCoach, D.B., &amp; Myers, E.B. (under review). Relationships between native and non-native speech perception.</p>
 </div>
 <div id="section" class="section level4">
 <h4>2022</h4>
