--- a/publications.html
+++ b/publications.html
@@ -291,7 +291,7 @@ speed in picture naming. <em>Journal of Cognition.</em></p>
 <p><strong>Fuhrmeister, P.</strong>, Madec, S., Lorenz, A., Elbuy, S.
 &amp; Bürki, A. (2022). Behavioral and EEG evidence for inter-individual
 variability in late encoding stages of word production. <em>Language,
-Cognition, and Neuroscience.</em> <a
+Cognition, and Neuroscience, 37</em>(7), 902-924. <a
 href="https://doi.org/10.1080/23273798.2022.2030483"
 class="uri">https://doi.org/10.1080/23273798.2022.2030483</a>
 <a href="Fuhrmeister_et_al_2022.pdf" target="_blank">PDF</a>
@@ -310,16 +310,16 @@ href="DOI:10.1080/23273798.2021.1944658"
 class="uri">DOI:10.1080/23273798.2021.1944658</a>
 <a href="Fuhrmeister_Myers_2021b.pdf" target="_blank">PDF</a>
 <a href="https://osf.io/vbtxd/" target="_blank">Data/code</a></p>
-</div>
-<div id="section-1" class="section level4">
-<h4>2021</h4>
-<p><strong>Fuhrmeister, P.</strong> &amp; Bürki, A. (2021).
+<p><strong>Fuhrmeister, P.</strong> &amp; Bürki, A. (2022).
 Distributional properties of semantic interference in picture naming:
-Bayesian meta-analyses. <em>Psychonomic Bulletin &amp; Review</em>. <a
-href="DOI:10.3758/s13423-021-02016-6"
+Bayesian meta-analyses. <em>Psychonomic Bulletin &amp; Review,
+29</em>(2), 635-647. <a href="DOI:10.3758/s13423-021-02016-6"
 class="uri">DOI:10.3758/s13423-021-02016-6</a>
 <a href="Fuhrmeister_Bürki_2021.pdf" target="_blank">PDF</a>
 <a href="https://osf.io/v2fx5/" target="_blank">Data/code</a></p>
+</div>
+<div id="section-1" class="section level4">
+<h4>2021</h4>
 <p><strong>Fuhrmeister, P.</strong> (2021). Examining group differences
 in between-participant variability in non-native speech sound learning.
 <em>Attention, Perception, and Psychophysics, 83</em>(5), 1935-1941. <a
