--- a/publications.html
+++ b/publications.html
@@ -280,12 +280,17 @@ $(document).ready(function () {
 (in-principle acceptance: registered report). Are faster participants
 always faster? Assessing reliability of participants’ mean response
 speed in picture naming. <em>Journal of Cognition.</em></p>
-<p><strong>Fuhrmeister, P.</strong>, Phillips, M., McCoach, D.B., &amp;
-Myers, E.B. (accepted). Relationships between native and non-native
-speech perception. <em>Journal of Experimental Psychology: Language,
-Memory, and Cognition.</em></p>
 </div>
 <div id="section" class="section level4">
+<h4>2023</h4>
+<p><strong>Fuhrmeister, P.</strong>, Phillips, M., McCoach, D.B., &amp;
+Myers, E.B. (2023). Relationships between native and non-native speech
+perception. <em>Journal of Experimental Psychology: Language, Memory,
+and Cognition.</em> <a href="https://doi.org/10.1037/xlm0001213"
+class="uri">https://doi.org/10.1037/xlm0001213</a>
+<a href="https://osf.io/2zg6c/" target="_blank">Data/code</a></p>
+</div>
+<div id="section-1" class="section level4">
 <h4>2022</h4>
 <p><strong>Fuhrmeister, P.</strong>, Madec, S., Lorenz, A., Elbuy, S.
 &amp; Bürki, A. (2022). Behavioral and EEG evidence for inter-individual
@@ -317,7 +322,7 @@ class="uri">DOI:10.3758/s13423-021-02016-6</a>
 <a href="Fuhrmeister_Bürki_2021.pdf" target="_blank">PDF</a>
 <a href="https://osf.io/v2fx5/" target="_blank">Data/code</a></p>
 </div>
-<div id="section-1" class="section level4">
+<div id="section-2" class="section level4">
 <h4>2021</h4>
 <p><strong>Fuhrmeister, P.</strong> (2021). Examining group differences
 in between-participant variability in non-native speech sound learning.
@@ -334,7 +339,7 @@ class="uri">https://doi.org/10.1016/j.bandl.2021.104919</a>
 <a href="Fuhrmeister_Myers_2021a.pdf" target="_blank">PDF</a>
 <a href="https://osf.io/7hak4/" target="_blank">Data/code</a></p>
 </div>
-<div id="section-2" class="section level4">
+<div id="section-3" class="section level4">
 <h4>2020</h4>
 <p><strong>Fuhrmeister, P.</strong>, Schlemmer, B., &amp; Myers, E.B.
 (2020). Adults show initial advantages over children in learning
@@ -361,7 +366,7 @@ class="uri">https://doi.org/10.3758/s13414-019-01925-y</a>
 <a href="Fuhrmeister_Myers_2020.pdf" target="_blank">PDF</a>
 <a href="https://osf.io/ujm4f/" target="_blank">Data/code</a></p>
 </div>
-<div id="section-3" class="section level4">
+<div id="section-4" class="section level4">
 <h4>2019</h4>
 <p><strong>Fuhrmeister, P.</strong> (2019). Interference in memory
 consolidation of non-native speech sounds. In S. Fuchs, J. Cleland,
@@ -376,7 +381,7 @@ phonetic categories. <em>Brain and Language, 198</em>, 104692. <a
 href="https://doi.org/10.1016/j.bandl.2019.104692"
 class="uri">https://doi.org/10.1016/j.bandl.2019.104692</a></p>
 </div>
-<div id="section-4" class="section level4">
+<div id="section-5" class="section level4">
 <h4>2017</h4>
 <p><strong>Fuhrmeister, P.</strong> &amp; Myers, E. B. (2017).
 Non-native phonetic learning is destabilized by exposure to phonological
