--- a/index.html
+++ b/index.html
@@ -274,10 +274,10 @@ $(document).ready(function () {
 
 
 <p><img src="fuhrmeister_recent%20Klein.jpeg" /></p>
-<p>I am a postdoc in Dr. Audrey Bürki’s lab, Cognitive Science: Language
-and Methods, at the University of Potsdam in Germany. My position is
-funded by the <a
-href="https://www.uni-potsdam.de/de/sfb1287/uebersicht">SFB project
+<p>I am a postdoc in Prof. Dr. Audrey Bürki’s lab, Cognitive Science:
+Language and Methods, at the University of Potsdam in Germany. My
+position is funded by the <a
+href="https://www.uni-potsdam.de/de/sfb1287/uebersicht">Sonderforschungsbereich
 Limits of Variability in Language.</a></p>
 <p>I received my PhD in Speech, Language, and Hearing Sciences in July
 of 2020 from University of Connecticut in the United States. I was a
@@ -294,8 +294,9 @@ by testing whether language ability, cognitive skills, or individual
 variation in brain structure (using MRI) predict individual differences
 in performance on various speech tasks.</p>
 <p>I am a big fan of open science, and I’ve made my data and analysis
-code for my recent projects publicly available at <a
-href="https://osf.io/m5ezq/">my OSF page</a>.</p>
+code for my recent projects publicly available on <a
+href="https://osf.io/m5ezq/">my OSF page</a> and <a
+href="https://github.com/pamfuhrmeister">my Github</a>.</p>
 <p>In addition to being a researcher, I am an avid runner, and I enjoy
 tasting good wines, watching crime shows, and above all spending time
 with my husband, Garrett, and our tiny singapura cat, Maja.</p>
