--- a/index.html
+++ b/index.html
@@ -274,9 +274,10 @@ $(document).ready(function () {
 
 
 <p><img src="fuhrmeister_recent%20Klein.jpeg" /></p>
-<p>I am a postdoc in Prof. Dr. Audrey Bürki’s lab, Cognitive Science:
-Language and Methods, at the University of Potsdam in Germany. My
-position is funded by the <a
+<p>I am a postdoc in <a
+href="https://audreyburki.github.io/Website/">Prof. Dr. Audrey Bürki’s
+lab</a>, Cognitive Science: Language and Methods, at the University of
+Potsdam in Germany. My position is funded by the <a
 href="https://www.uni-potsdam.de/de/sfb1287/uebersicht">Sonderforschungsbereich
 Limits of Variability in Language.</a></p>
 <p>I received my PhD in Speech, Language, and Hearing Sciences in July
