--- a/publications.html
+++ b/publications.html
@@ -276,6 +276,10 @@ $(document).ready(function () {
 <!-- #### Submitted/under review -->
 <div id="acceptedin-press" class="section level4">
 <h4>Accepted/in press</h4>
+<p>Myers, E.B. &amp; <strong>Fuhrmeister, P.</strong> (in press). The
+neurolinguistics of L2 phonology: A view of phonemic contrast learning.
+In K. Morgan-Short, &amp; J.G. van Hell (Eds.), <em>Routledge Handbook
+of Second Language Acquisition and Neurolinguistics.</em></p>
 <p><strong>Fuhrmeister, P.</strong>, Elbuy, S., &amp; Bürki, A.
 (in-principle acceptance: registered report). Are faster participants
 always faster? Assessing reliability of participants’ mean response
