--- a/publications.html
+++ b/publications.html
@@ -251,6 +251,9 @@ $(document).ready(function () {
   <a href="index.html">Home</a>
 </li>
 <li>
+  <a href="projects.html">Projects</a>
+</li>
+<li>
   <a href="publications.html">Publications</a>
 </li>
       </ul>
