added analysis project Maja tricks

--- a/projects.html
+++ b/projects.html
@@ -292,6 +292,15 @@ class="section level4">
 <!-- </div> -->
 <div style="display:flex; flex-wrap:wrap; gap:20px;">
 <div style="width:200px; text-align:center;">
+<a href="projects/maja_up.html" target="_blank">
+<img src="projects/maja_up.png" style="width:200px; height:150px; object-fit:cover; border-radius:5px;">
+<p>
+Does my cat understand the word “up”?
+</p>
+<p></a></p>
+</div>
+<div style="display:flex; flex-wrap:wrap; gap:20px;">
+<div style="width:200px; text-align:center;">
 <a href="projects/analyses_driving_sim.html" target="_blank">
 <img src="projects/ratioplot-1.png" style="width:200px; height:150px; object-fit:cover; border-radius:5px;">
 <p>
@@ -314,6 +323,7 @@ k-means cluster analysis
 4-parameter logistic regression model
 </p>
 <p></a></p>
+</div>
 </div>
 </div>
 </div>
